ADD - Exception handling for matching ticket to venue size